Fix double scrollbars in workflow details

--- a/src/app/workflows/components/workflow-details/workflow-details.scss
+++ b/src/app/workflows/components/workflow-details/workflow-details.scss
@@ -1,6 +1,7 @@
 @import '../../../shared/styles/config';
 
 .workflow-details {
+    overflow: hidden;
 
     &, & > .row {
         height: calc(100vh - 2 * #{$top-bar-height});
